introduce css layer concept
- and improve the styling of basicPage

--- a/site/basicPage/main.css
+++ b/site/basicPage/main.css
@@ -1,27 +1,29 @@
-@import "../general.css";
+@import "../general.css" layer(general);
 
-body {
-	margin: 0;
+@layer general page;
 
-	display: flex;
-	flex-flow: column nowrap;
-	min-height: 100vh;
+@layer page {
+	body {
+		margin: 0;
+
+		display: flex;
+		flex-flow: column nowrap;
+		min-height: 100vh;
+	}
+
+	header {
+		flex: 0;
+
+		position: sticky;
+		top: 0;
+	}
+
+	main {
+		flex: 1;
+		padding: var(--padding);
+	}
+
+	footer {
+		flex: 0;
+	}
 }
-
-header {
-	flex: 0;
-	position: sticky;
-	top: 0;
-	padding: 0.5em;
-}
-
-main {
-	flex: 1;
-	padding: 0.5em;
-}
-
-footer {
-	flex: 0;
-	padding: 0.5em;
-}
-
